DC-513 | UI | Site Diagrams | Customize nodes based on asset type (#708)
## [DC-513](https://flexgen.atlassian.net/browse/DC-513)

## Description
Replaces JointJS diagramming library and implementation with ReactFlow
library and implementation.
Implements a basic diagram visualization including custom nodes that
indicate asset type and follow consistent styling.

## How Has This Been Tested?
Manually tested in the UI.
