# web_apps/packages/hybridos/server/src/bff/ConfigurablePages/Dashboard/dashboard.constants.ts
@@ -1,4 +1,5 @@
 export const siteDiagramDescriptions = {
-    id: 'ID of the asset as specified in the site diagram',
+    id: 'ID of the asset, as specified in the site diagram',
+    asset_type: 'Asset type, as specified in the site diagram',
     children: 'Children of the asset, determined from the site diagram'
 };
