# web_apps/packages/hybridos/server/src/bff/ConfigurablePages/Dashboard/dashboard.service.ts
@@ -115,6 +115,7 @@ export class DashboardService {
   private parseSiteDiagramConfig = (data): SiteDiagramResponse => {
     const parsedData: SiteDiagramResponse = {
       id: data?.root.id,
+      asset_type: data?.root.asset_type,
       children: data?.root.children
     };
 
